1.7.1
Sat, 04 Nov 2006 19:23:29 +0000
  * chpst.c, uidgid.c, uidgid.h: support numerical uid gid through
    chpst -[u|U] :uid:gid...
  * man/chpst.8: adapt; clarify that users and groups are looked up in
    /etc/passwd and /etc/group only.
  * sv.c: properly wait for a service to be restarted on 'restart';
    support checks through -v for pause, cont, kill.
  * doc/runscripts.html: add contributed run scripts (thx Kevin, marlowe,
    ed neville, xavier dutoit).

1.7.0
Sat, 07 Oct 2006 18:24:17 +0000
  * svlogd.c, fmt_ptime.*, man/svlogd.8: new option -ttt: prefix log
    messages with sortable UTC timestamp YYYY-MM-DDTHH:MM:SS.xxxxx.
  * runsv.c, runsv.8: give two arguments to ./finish: exit code and exit
    status of ./run (mostly copied from pipe-tools' npt-supervise, thx
    Laurent Bercot).
  * runit.c: don't make console the controlling terminal for process 1,
    but for stage 1 only; fork before initiating system halt or reboot,
    the linux kernel calls do_exit(0) in kernel/sys.c (thx Jan Kampe).

1.6.0
Thu, 29 Jun 2006 07:52:35 +0000
  * svlogd.c: cleanup *.t files possibly leftover by processor when
    interrupted by signal, also on startup (thx Andras Korn,
    http://bugs.debian.org/369840); 1st rename .t to .s, then remove .u.
  * man/svlogd.8: adapt.
  * svlogd.c: prepend optional timestamp to log messages sent through UDP,
    as done for messages written to dir and to stderr.
  * uidgid.c: properly fixup user/group argument on getpwnam() error.
  * doc/benefits.html: typo; wording.

1.5.1
Wed, 10 May 2006 20:55:35 +0000
  * runsv.c: delay restart of log service at least 1 sec, just as the main
    service.
  * runsvdir.c: don't double-copy filedescriptor.
  * package/README, package/COPYING: 2006.
  * man/runsvctrl.8, man/runsvstat.8, man/svwaitup.8, man/svwaitdown.8,
    doc/runsvctrl.html, doc/runsvstat.html, doc/svwaitdown.html,
    doc/svwaitup.html: remove; obsolete.

1.5.0
Sun, 16 Apr 2006 12:26:50 +0000