@@ -198,6 +198,36 @@ I recommend doing this; for instructions, see
 See <a href="http://smarden.org/runit/">http://smarden.org/runit/</a>
 for recent informations.
 <hr>
+The following distributions are known to include or package <i>runit</i>:
+<ul>
+<li><a href="http://packages.qa.debian.org/runit">
+Debian GNU/Linux</a> (as alternative init scheme)
+<li><a href="http://http://www.freshports.org/sysutils/runit/">
+FreeBSD</a>
+<li><a href="http://www.openbsd.org/cgi-bin/cvsweb/ports/sysutils/runit/">
+OpenBSD</a>
+<li><a href="http://pkgsrc.se/wip/runit/">
+NetBSD</a>
+<li><a href="http://annvix.org/">
+Annvix</a> (as default init scheme)
+<li><a href="http://packages.ubuntu.com/runit">
+Ubuntu</a> (as alternative init scheme)
+<li><a href="http://packages.gentoo.org/search/?sstring=runit">
+Gentoo</a>
+<li><a href="http://www.smeserver.org/">
+SME server</a>
+<li><a href="http://www.opensde.org/">
+OpenSDE</a>
+<li><a href="http://www.t2-project.org/">
+T2</a>
+<li><a href="http://zinux.cynicbytrade.com/">
+Zinux Linux</a> (as default init scheme)
+<li><a href="http://www.gobolinux.org/">
+GoboLinux</a>
+</ul>
+If you know of more distributions, please
+<a href="mailto:supervision@list.skarnet.org">let me know</a>.
+<hr>
 Related links:
 <ul>
 <li><a href="http://www.fefe.de/minit/">
