@@ -226,7 +226,7 @@ logging console messages</a><br>
  exec chronyd -d -r -s
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="clamav">A <tt>clamd</tt> run script</a></h3>
@@ -237,7 +237,7 @@ to be set up.
  exec setuidgid clamav softlimit -a 40000000 clamd
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="clamsmtpd">A <tt>clamsmtpd</tt> run script</a></h3>
@@ -248,7 +248,7 @@ to be set up.
  exec chpst -uclamav clamsmtpd -d 3
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="courier-imap">A <tt>courier-imap</tt> run script</a></h3>
@@ -305,7 +305,7 @@ this page</a>.
  exec dhcpd-2.2.x -f -d -cf ./config eth0
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <p>
 (<i>Solaris 8</i>, uses additional dsvclockd service, would get fired off
@@ -326,7 +326,7 @@ automatically, but then it's not supervised)
  exec /usr/bin/sleep 5
 </pre>
 The in.dhcpd service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="dictd">A <tt>dictd</tt> run script</a></h3>
@@ -345,7 +345,7 @@ to be set up.
  exec dropbear -F -E -p 22
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <p>
 (<i>Linux</i>, running under
@@ -356,7 +356,7 @@ to be set up.
  exec tcpsvd -v -i./peers 0 22 dropbear -i -E
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="exim">An <tt>exim</tt> run script</a></h3>
@@ -383,7 +383,7 @@ to be set up.
  exec fam -L -f -v
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <p>
 (<i>Debian sarge</i>)
@@ -419,7 +419,7 @@ to be set up.
  exec fcron -f -y
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="fetchmail">A <tt>fetchmail</tt> run script</a></h3>
@@ -496,7 +496,7 @@ process state for those <i>getties</i>.
  exec oidentd -i -S -t 10 -u daemon -g daemon
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <p>
 (<i>Debian</i>)
@@ -506,7 +506,7 @@ to be set up.
    -C /etc/oidentd/oidentd.conf 2&gt;&amp;1
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="inn">An <tt>innd</tt> run script</a></h3>
@@ -531,7 +531,7 @@ to be set up.
    /usr/local/jabber/jabberd/jabberd -D -c /etc/jabber.xml
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <pre>
  #!/bin/sh
@@ -541,7 +541,7 @@ to be set up.
    /usr/local/jabber/jit/jabberd/jabberd -c /etc/jit.xml
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="junkbuster">A <tt>junkbuster</tt> run script</a></h3>
@@ -586,7 +586,7 @@ to be set up.
    leafnode
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="loglinuxkernel">
@@ -620,7 +620,7 @@ A run script for <tt>logging Linux kernel messages with multilog</tt></a></h3>
    minidentd -v
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="mpd">A <tt>mpd</tt> run script</a></h3>
@@ -631,7 +631,7 @@ to be set up.
  exec mpd --stdout --no-daemon $MPDCONF
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="nscd">A <tt>nscd</tt> run script</a></h3>
@@ -663,7 +663,7 @@ to be set up.
  exec /usr/sbin/ntpd -s -d 2>&1
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="nullidentd">A <tt>nullidentd</tt> run script</a></h3>
@@ -674,7 +674,7 @@ to be set up.
  exec tcpsvd -u nobody -x nullidentd-cdb -t 60 0 113 nullidentd
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="polipo">A <tt>polipo</tt> run script</a></h3>
@@ -686,7 +686,7 @@ to be set up.
    polipo -c config forbiddenFile="`pwd`"/forbidden diskCacheRoot="`pwd`"/cache
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="pop3-ssl">A <tt>pop3-ssl</tt> run script</a></h3>
@@ -699,7 +699,7 @@ to be set up.
  "`cat /var/qmail/control/me`" vchkpw /var/qmail/bin/qmail-pop3d Maildir 2&gt;&amp;1
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="pop3vscan">A <tt>pop3vscan</tt> run script</a></h3>
@@ -710,7 +710,7 @@ to be set up.
  exec setuidgid pop3vscan pop3vscan -d
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="portmap">A <tt>portmap</tt> run script</a></h3>
@@ -729,7 +729,7 @@ to be set up.
    -D /var/lib/postgres/data 2&gt;&amp;1
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="powernowd">A <tt>powernowd</tt> run script</a></h3>
@@ -770,7 +770,7 @@ to be set up.
  exec chpst -u privoxy:nogroup privoxy --no-daemon /etc/privoxy/config
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="proftpd">A <tt>proftpd</tt> run script</a></h3>
@@ -782,7 +782,7 @@ configure it to use 'ErrorLog "/dev/stdout"')
  exec proftpd -n -d 1
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="pure-ftpd">A <tt>pure-ftpd</tt> run script</a></h3>
@@ -801,7 +801,7 @@ to be set up.
  exec radiusd -f -y -z -lstdout
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="rmrtg">A <tt>rmrtg</tt> run script</a></h3>
@@ -826,7 +826,7 @@ to be set up.
    --config /pack/rsync/etc/rsyncd.conf
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="samba">A <tt>smbd</tt> run script</a></h3>
@@ -838,7 +838,7 @@ to be set up.
  exec smbd -F -S -d3
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <h3>A <tt>nmbd</tt> run script</h3>
 (<i>Linux</i>)
@@ -849,7 +849,7 @@ to be set up.
  exec nmbd -F -S -d1
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="shoutcast">A <tt>shoutcast</tt> run script</a></h3>
@@ -861,7 +861,7 @@ to be set up.
    /usr/local/sc_serv/bin/sc_serv /etc/sc_serv.conf
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="spamd">A <tt>spamd</tt> run script</a></h3>
@@ -871,7 +871,7 @@ to be set up.
  exec spamd -m 20 -a -H -s stderr 2&gt;&amp;1
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="squid">A <tt>squid</tt> run script</a></h3>
@@ -889,7 +889,7 @@ to be set up.
  exec /usr/sbin/sshd -D -e
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="sshdtcpserver">
@@ -903,7 +903,7 @@ A <tt>sshd (under tcpserver)</tt> run script</a></h3>
  sshd -ief config
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="statd">A <tt>statd</tt> run script</a></h3>
@@ -923,7 +923,7 @@ to be set up.
  exec rpc.statd -F -d
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <h3><a name="mountd">A <tt>mountd</tt> run script</a></h3>
 (<i>Debian</i>)
@@ -986,7 +986,7 @@ to be set up.
  exec /usr/local/tmda/bin/tmda-ofmipd -f -d -R pop3 -p my.host.name:8025 2&gt;&amp;1
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="tomcat">A <tt>tomcat</tt> run script</a></h3>
@@ -1017,7 +1017,7 @@ to be set up.
      softlimit -d300000 /var/vsftpd/bin/vsftpd
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="wvdial">A <tt>wvdial</tt> run script</a></h3>
@@ -1029,7 +1029,7 @@ file, use <tt>svc -o /service/wvdial</tt> to bring up a ppp connection)
  exec wvdial ISP
 </pre>
 This service needs a
-<a href="http://cr.yp.to/daemontools/faq/create.html#runlog">log service</a>
+<a href="faq.html#createlog">log service</a>
 to be set up.
 <hr>
 <h3><a name="xdm">A <tt>xdm</tt> run script</a></h3>
